Update usbutils to version 006.
Signed-off-by: Marko Saukko <marko.saukko@jollamobile.com>

--- a/usbutils.yaml
+++ b/usbutils.yaml
@@ -1,19 +1,19 @@
 Name: usbutils
 Summary: Linux USB utilities
-Version: 005
+Version: 006
 Release: 1
 Group: Applications/System
 License: GPLv2+
 URL: http://www.linux-usb.org/
 Sources:
-    # http://www.kernel.org/pub/linux/utils/usb/usbutils/
-    # https://github.com/gregkh/usbutils/tarball/v005
-    - gregkh-usbutils-v005-0-g90d96a3.tar.gz
-    - usbhid-dump-1.3.tar.bz2
+    - http://www.kernel.org/pub/linux/utils/usb/usbutils/%{name}-%{version}.tar.xz
     - usbutils-rpmlintrc
 Patches:
-    - usbutils-003-hwdata.patch
+    - usbutils-006-hwdata.patch
     - usbutils-make-hwdata.patch
+
+SetupOptions: -q -n %{name}-%{version}
+
 Description: |
     This package contains utilities for inspecting devices connected to a
     USB bus.
@@ -28,7 +28,10 @@ PkgBR:
 Configure: configure
 ConfigOptions:
     - --sbindir=%{_sbindir}
+    - --datadir=%{_datadir}/hwdata 
+    - --disable-usbids
 Builder: make
 
 AutoSubPackages:
     - devel
+
