--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "usbutils"]
 	path = usbutils
-	url = https://github.com/gregkh/usbutils.git
+	url = https://github.com/sailfishos-mirror/usbutils.git
